--- a/aula2/Catalago/app/src/main/res/values/strings.xml
+++ b/aula2/Catalago/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">CatalogoDigital</string>
+    <string name="search">Procurar</string>
+    <string name="o_mundo_cada_vez_mais_digital">O MUNDO\nCADA VEZ MAIS\n<b>DIGITAL</b></string>
+    <string name="novidades">Novidades</string>
+    <string name="produtos">Produtos</string>
+    <string name="fde_600w_nome">FDE-600W</string>
+    <string name="fde_600w_descricao">FECHADURA DIGITAL DE  EMBUTIR A\n PROVA D’ÁGUA E COM CONECTIVIDADE</string>
+    <string name="fde_600w_preco">R$1.500,00</string>
 </resources>
