--- a/aula2/Catalago/app/src/main/res/values/strings.xml
+++ b/aula2/Catalago/app/src/main/res/values/strings.xml
@@ -5,6 +5,29 @@
     <string name="novidades">Novidades</string>
     <string name="produtos">Produtos</string>
     <string name="fde_600w_nome">FDE-600W</string>
-    <string name="fde_600w_descricao">FECHADURA DIGITAL DE  EMBUTIR A\n PROVA D’ÁGUA E COM CONECTIVIDADE</string>
+    <string name="fde_agua_descricao">FECHADURA DIGITAL DE  EMBUTIR A\nPROVA D’ÁGUA E COM CONECTIVIDADE</string>
     <string name="fde_600w_preco">R$1.500,00</string>
+    <string name="fde_300w_nome">FDE-300W</string>
+    <string name="fde_500pro_nome">FDE-500 Pro</string>
+    <string name="fde_fde500pro_descricao">FECHADURA DIGITAL DE  EMBUTIR COM\nCONECTIVIDADE</string>
+    <string name="fde_201r_nome">FDE-201R</string>
+    <string name="fde_fde201r_descricao">FECHADURA DIGITAL DE  EMBUTIR COM\nROLLETE</string>
+    <string name="fde_201_nome">FDE-201</string>
+    <string name="fde_fde201_descricao">FECHADURA DIGITAL DE  EMBUTIR</string>
+    <string name="fds_101_nome">FDS-101</string>
+    <string name="fde_fds101_descricao">FECHADURA DIGITAL DE  SOBREPOR</string>
+    <string name="fds_10_nome">FDS-10</string>
+    <string name="fde_fds10_descricao">FECHADURA DIGITAL DE  SOBREPOR</string>
+    <string name="fdv_200_nome">FDV-200</string>
+    <string name="fde_fdv200_descricao">FECHADURA DIGITAL DE  SOBREPOR PARA\nPORTAS DE VIDRO</string>
+    <string name="texto_agua_dsc">Resistente à\nágua</string>
+    <string name="texto_acesso_dsc">Acesso remoto\nvia wi-fi</string>
+    <string name="texto_teclado_dsc">Teclado\nnumérico</string>
+    <string name="texto_alexa_dsc">Compatível com\nAlexa</string>
+    <string name="texto_biometrico_dsc">Leitor\nBiométrico</string>
+    <string name="texto_cartao_dsc">Acesso por\ncartão</string>
+    <string name="titulo_page_fde300w">FDE-300w</string>
+    <string name="titulo_page_fde600w">FDE-600W</string>
+    <string name="descricao_page_embutir">FECHADURA DIGITAL DE EMBUTIR</string>
+    <string name="botao">Comprar agora</string>
 </resources>
